# KatibaAI

./: .env  README.md  pyproject.toml  requirements.txt
api/: main.py
models/: schema.py
services/: llm_service.py  vector_service.py
ui/mizaniai/: package-lock.json  package.json
ui/mizaniai/src/app/: layout.tsx  page.tsx
ui/mizaniai/src/components/chat/: chat-interface.tsx  chat-message.tsx
ui/mizaniai/src/components/layout/: sidebar.tsx
ui/mizaniai/src/hooks/: use-chat.ts
ui/mizaniai/src/lib/: api.ts
ui/mizaniai/src/types/: chat.ts
utils/: load_vector.py
