[project]
name = "legalai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "langchain",
    "langchain-google-genai",
    "pinecone",
    "python-dotenv",
    "sse-starlette",
    "uvicorn",
    "google-generativeai",
    "langchain-pinecone>=0.2.11",
    "langchain-openai>=0.3.30",
]
